# cmake-docs-l10n-draft4

./: CMakeLists.txt  CMakePresets.json  README.md  README.zh_CN.md  mutex_queue  progress.txt
.github/: FUNDING.yml
.github/workflows/: ci-automerge-pr.yml  ci-check-pr-status.yml  ci-cherry-pick-source.yml  ci-crowdin-contributor.yml  ci-crowdin-document.yml  ci-crowdin-download-po.yml  ci-crowdin-upload-pot.yml  ci-deploy-gh-pages.yml  ci-deploy-po-version.yml  ci-gettext-statistic-po.yml  ci-gettext-update-po.yml  ci-sphinx-update-pot.yml  matrix.json  use-crowdin-document.yml  use-crowdin-download-po.yml  use-crowdin-status-po.yml  use-crowdin-upload-pot.yml  use-deploy-gh-pages.yml  use-deploy-po-version.yml  use-gettext-statistic-po.yml  use-gettext-update-po.yml  use-merge-compendium.yml  use-sphinx-update-pot.yml
cmake/modules/: GitUtils.cmake
cmake/scripts/: crowdin_download_po.cmake  crowdin_status.cmake  crowdin_upload_pot.cmake  gettext_statistic_po.cmake  gettext_update_po.cmake  merge_compendium.cmake  prepare_git_repo.cmake  sphinx_build_docs.cmake  sphinx_update_pot.cmake  venv_pip_install.cmake
cmake/templates/: crowdin.yml.in
docs/: CONTRIBUTING.md  CONTRIBUTING.zh_TW.md
l10n/: .gitignore
requirements/: sphinx-6.2.1.txt
